original/container-registry/istio.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: container-registry
spec:
  gateways:
    - container-registry/container-registry-ingressgateway
  hosts:
    - "*"
  http:
    - route:
        - destination:
            host: container-registry-ui.container-registry.svc.cluster.local
            port:
              number: 80
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: container-registry-ingressgateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - cr.k8s.tidu.giize.com
